2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* ScreenFontStyle.cpp: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.cpp:
	* Notification.wrl:
	* FontStyle.h:
	* FontStyle.cpp:
	* X3DFontStyleNode.h:
	* ScreenFontStyle.h:
	* X3DFontStyleNode.cpp:
	* ScreenFontStyle.cpp: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.h:
	* Text.cpp:
	* Layout.h:
	* Notification.wrl:
	* FontStyle.h:
	* Layout.cpp:
	* FontStyle.cpp:
	* X3DBrowserSurface.cpp:
	* X3DLayoutNode.h:
	* Viewpoint.h:
	* X3DExecutionContext.cpp:
	* ScreenGroup.cpp:
	* X3DFontStyleNode.h:
	* Viewpoint.cpp:
	* ScreenFontStyle.h:
	* GeoViewpoint.h:
	* X3DFontStyleNode.cpp:
	* ScreenFontStyle.cpp:
	* OrthoViewpoint.h:
	* GeoViewpoint.cpp:
	* X3DGeometryNode.h:
	* ElevationGrid.cpp:
	* IndexedLineSet.cpp:
	* IndexedFaceSet.cpp:
	* OrthoViewpoint.cpp:
	* X3DViewpointNode.h:
	* X3DTexture2DNode.cpp:
	* X3DComposedGeometryNode.cpp: 

2013-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.cpp:
	* IndexedLineSet.cpp: 

2013-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DFieldDefinition.cpp:
	* X3DBrowserContext.cpp:
	* X3DExecutionContext.cpp:
	* jsContext.cpp: 

2013-10-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Appearance.h:
	* Appearance.cpp:
	* ProgramShader.cpp:
	* ShaderProgram.cpp: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* SphereSensor.cpp: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.cpp:
	* TransformHandle.wrl:
	* SphereSensor.h:
	* CylinderSensor.h:
	* SphereSensor.cpp:
	* CylinderSensor.cpp: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl:
	* X3DShapeNode.cpp:
	* BrowserOptions.cpp:
	* TextureProperties.cpp:
	* SphereSensor.h:
	* CylinderSensor.h:
	* SphereSensor.cpp:
	* CylinderSensor.cpp: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewVolume.cpp:
	* TransformHandle.wrl:
	* PlaneSensor.h:
	* PlaneSensor.cpp:
	* SphereSensor.cpp:
	* CylinderSensor.cpp: 
