@@ -1,5 +1,10 @@
 2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DFontStyleNode.cpp:
+	* ScreenFontStyle.cpp: 
+
+2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ScreenFontStyle.cpp: 
 
 2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>
